--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
     <header class="navbar">
       <div class="container nav-wrapper">
         <a href="#home" class="logo">
-  <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
-</a>
-
-
-  
-
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
+        </a>
         <nav class="nav-menu">
           <ul>
             <li><a href="#solution">Solution</a></li>
@@ -32,8 +28,8 @@
       <!-- Hero Section -->
       <section id="home" class="hero">
         <div class="container hero-content">
-          <h1>Unlock Your Time &amp; Growth</h1>
-          <p>High‑impact AI automation designed for established businesses.</p>
+          <h1>Unlock Your Time & Growth</h1>
+          <p>High-impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
       </section>
@@ -46,13 +42,13 @@
             <p>Successful business owners are falling behind because they don’t have time to learn AI—yet they can’t afford not to use it.</p>
             <ul class="bullets">
               <li>Wasting hours on manual tasks</li>
-              <li>Leaking leads from slow follow‑up</li>
+              <li>Leaking leads from slow follow-up</li>
               <li>Overwhelmed by tools they don’t understand</li>
               <li>Needing AI to stay competitive but lacking time to learn it</li>
             </ul>
           </div>
           <div class="image">
-            <img src="assets/problem-illustration.png" alt="Problem illustration" />
+            <img src="automation-robot.png" alt="Problem illustration" />
           </div>
         </div>
       </section>
@@ -61,14 +57,14 @@
       <section id="solution" class="section solution-section">
         <div class="container">
           <h2>Our Solution</h2>
-          <p>Qorra plugs AI into your business workflows so you don’t have to. We automate lead capture, follow‑up, onboarding and client communication while building agents that think, respond and handle tasks for you. We deliver white‑glove service and real outcomes—not hype.</p>
+          <p>Qorra plugs AI into your business workflows so you don’t have to. We automate lead capture, follow-up, onboarding and client communication while building agents that think, respond and handle tasks for you. We deliver white-glove service and real outcomes—not hype.</p>
           <div class="cards features">
             <div class="card">
-              <h3>Hands‑Free Automations</h3>
-              <p>From scheduling to onboarding and follow‑ups, we design and manage automations that reclaim hours every week.</p>
+              <h3>Hands-Free Automations</h3>
+              <p>From scheduling to onboarding and follow-ups, we design and manage automations that reclaim hours every week.</p>
             </div>
             <div class="card">
-              <h3>High‑Touch Support</h3>
+              <h3>High-Touch Support</h3>
               <p>We’re your AI partner, not a DIY tool. Our concierge team sets up, manages and evolves your systems.</p>
             </div>
             <div class="card">
@@ -80,35 +76,32 @@
       </section>
 
       <!-- Target Market Section -->
-<section id="market" class="section market-section">
-  <div class="container two-column">
-    <div class="text">
-      <h2>Who We Serve</h2>
-      <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
-
-      <h3>Core Clients</h3>
-      <ul class="bullets">
-        <li>Consultants, advisors, and agency owners</li>
-        <li>Client-first professionals who value outcomes over dashboards</li>
-        <li>Busy operators looking to reclaim time and reduce overhead</li>
-        <li>Service teams seeking smarter, done-for-you automation</li>
-      </ul>
-
-      <h3>Specialized Industries</h3>
-      <ul class="bullets">
-        <li>Real estate brokerages and high-volume agents</li>
-        <li>Insurance and financial services professionals</li>
-        <li>Legal teams and boutique law firms</li>
-        <li>Medspa, wellness, and aesthetic clinics</li>
-        <li>Admin-heavy businesses ready to streamline operations</li>
-      </ul>
-    </div>
-    <div class="image">
-      <img src="assets/target-illustration.png" alt="Target market illustration" />
-    </div>
-  </div>
-</section>
-
+      <section id="market" class="section market-section">
+        <div class="container two-column">
+          <div class="text">
+            <h2>Who We Serve</h2>
+            <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
+            <h3>Core Clients</h3>
+            <ul class="bullets">
+              <li>Consultants, advisors, and agency owners</li>
+              <li>Client-first professionals who value outcomes over dashboards</li>
+              <li>Busy operators looking to reclaim time and reduce overhead</li>
+              <li>Service teams seeking smarter, done-for-you automation</li>
+            </ul>
+            <h3>Specialized Industries</h3>
+            <ul class="bullets">
+              <li>Real estate brokerages and high-volume agents</li>
+              <li>Insurance and financial services professionals</li>
+              <li>Legal teams and boutique law firms</li>
+              <li>Medspa, wellness, and aesthetic clinics</li>
+              <li>Admin-heavy businesses ready to streamline operations</li>
+            </ul>
+          </div>
+          <div class="image">
+            <img src="robot-and-man.png" alt="Target market illustration" />
+          </div>
+        </div>
+      </section>
 
       <!-- Packages Section -->
       <section id="packages" class="section packages-section">
@@ -116,15 +109,15 @@
           <h2>Packages</h2>
           <div class="cards packages">
             <div class="card">
-              <h3>Set It &amp; Scale</h3>
+              <h3>Set It & Scale</h3>
               <p class="price">$2,500</p>
-              <p>Three done‑for‑you automations to jump‑start your business growth.</p>
+              <p>Three done-for-you automations to jump-start your business growth.</p>
               <a href="#contact" class="btn secondary-btn">Get Started</a>
             </div>
             <div class="card">
               <h3>Qorra Concierge</h3>
               <p class="price">$750/mo</p>
-              <p>Monthly updates and hands‑on AI agent management to keep you ahead.</p>
+              <p>Monthly updates and hands-on AI agent management to keep you ahead.</p>
               <a href="#contact" class="btn secondary-btn">Subscribe</a>
             </div>
             <div class="card">
@@ -147,7 +140,7 @@
               <p>We deliver measurable results by plugging AI into your business—no fluff.</p>
             </div>
             <div class="card">
-              <h3>White‑Glove Concierge</h3>
+              <h3>White-Glove Concierge</h3>
               <p>We set up, manage and evolve your automations so you don’t have to.</p>
             </div>
             <div class="card">
@@ -195,7 +188,7 @@
     <footer class="footer">
       <div class="container footer-content">
         <p>&copy; 2025 Qorra AI. All rights reserved.</p>
-        <p class="citation">*Research shows that lead generation forms that blend seamlessly into your website’s design yield higher conversion rates【529287160328501†L92-L103】.</p>
+        <p class="citation">*Research shows that lead generation forms that blend seamlessly into your website’s design yield higher conversion rates.</p>
       </div>
     </footer>
   </body>
