--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <div class="container hero-content">
           <h1>Unlock Your Time & Growth</h1>
           <p>High-impact AI automation designed for established businesses.</p>
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 100px; margin: 1.5rem auto; display: block;" />
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
       </section>
