--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <!-- Hero Section -->
       <section id="home" class="hero">
         <div class="container hero-content">
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 140px; margin-bottom: 1.5rem;" />
           <h1>Unlock Your Time & Growth</h1>
           <p>High-impact AI automation designed for established businesses.</p>
-          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 100px; margin: 1.5rem auto; display: block;" />
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
       </section>
@@ -49,7 +49,7 @@
             </ul>
           </div>
           <div class="image">
-            <img src="automation-robot.png" alt="Problem illustration" />
+            <img src="assets/automation-robot.png" alt="Problem illustration" style="max-width: 100%; height: auto; border-radius: 10px;" />
           </div>
         </div>
       </section>
@@ -99,7 +99,7 @@
             </ul>
           </div>
           <div class="image">
-            <img src="robot-and-man.png" alt="Target market illustration" />
+            <img src="assets/robot-and-man.png" alt="Target market illustration" style="max-width: 100%; height: auto; border-radius: 10px;" />
           </div>
         </div>
       </section>
