--- a/index.html
+++ b/index.html
@@ -1,219 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qorra AI | Unlock Time & Growth</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
-    <style>
-      .problem-section img,
-      .market-section img {
-        max-width: 420px;
-        width: 100%;
-        height: auto;
-        border-radius: 10px;
-        display: block;
-        margin: 0 auto;
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Qorra AI | Unlock Time & Growth</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="script.js"></script>
+  <style>
+    /* Image Styling */
+    .problem-section img,
+    .market-section img {
+      max-width: 280px;
+      width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin: 20px auto;
+      display: block;
+    }
+
+    /* Hero Logo Layout */
+    .hero-content {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+
+    .hero-content .hero-logo {
+      flex: 0 0 auto;
+    }
+
+    .hero-content .hero-logo img {
+      height: 180px;
+    }
+
+    .hero-content .hero-text {
+      max-width: 500px;
+      text-align: left;
+    }
+
+    /* Package cleanup */
+    .packages .card .price {
+      display: none;
+    }
+
+    @media (max-width: 768px) {
+      .hero-content {
+        flex-direction: column;
+        text-align: center;
       }
 
-      .hero-content img {
-        height: 100px;
-        margin-bottom: 1.5rem;
+      .hero-content .hero-text {
+        text-align: center;
       }
 
-      @media (max-width: 768px) {
-        .hero-content img {
-          height: 80px;
-        }
+      .hero-content .hero-logo img {
+        height: 140px;
       }
-    </style>
-  </head>
+    }
+  </style>
+</head>
 
-  <body>
-    <header class="navbar">
-      <div class="container nav-wrapper">
-        <a href="#home" class="logo">
-          <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
-        </a>
-        <nav class="nav-menu">
-          <ul>
-            <li><a href="#solution">Solution</a></li>
-            <li><a href="#packages">Packages</a></li>
-            <li><a href="#why">Why Qorra</a></li>
-            <li><a href="#contact" class="btn primary-btn">Get Started</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+<body>
+  <header class="navbar">
+    <div class="container nav-wrapper">
+      <a href="#home" class="logo">
+        <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
+      </a>
+      <nav class="nav-menu">
+        <ul>
+          <li><a href="#solution">Solution</a></li>
+          <li><a href="#packages">Packages</a></li>
+          <li><a href="#why">Why Qorra</a></li>
+          <li><a href="#contact" class="btn primary-btn">Get Started</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <main>
-      <!-- Hero Section -->
-      <section id="home" class="hero">
-        <div class="container hero-content">
+  <main>
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+      <div class="container hero-content">
+        <div class="hero-logo">
           <img src="qorra-ai-logo.png" alt="Qorra AI logo" />
+        </div>
+        <div class="hero-text">
           <h1>Unlock Your Time & Growth</h1>
           <p>High-impact AI automation designed for established businesses.</p>
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
-      </section>
-
-      <!-- Problem Section -->
-      <section id="problem" class="section problem-section">
-        <div class="container two-column">
-          <div class="text">
-            <h2>The Problem</h2>
-            <p>Successful business owners are falling behind because they don’t have time to learn AI—yet they can’t afford not to use it.</p>
-            <ul class="bullets">
-              <li>Wasting hours on manual tasks</li>
-              <li>Leaking leads from slow follow-up</li>
-              <li>Overwhelmed by tools they don’t understand</li>
-              <li>Needing AI to stay competitive but lacking time to learn it</li>
-            </ul>
-          </div>
-          <div class="image">
-            <img src="assets/automation-robot.png" alt="Problem illustration" />
-          </div>
-        </div>
-      </section>
-
-      <!-- Solution Section -->
-      <section id="solution" class="section solution-section">
-        <div class="container">
-          <h2>Our Solution</h2>
-          <p>Qorra plugs AI into your business workflows so you don’t have to. We automate lead capture, follow-up, onboarding and client communication while building agents that think, respond and handle tasks for you. We deliver white-glove service and real outcomes—not hype.</p>
-          <div class="cards features">
-            <div class="card">
-              <h3>Hands-Free Automations</h3>
-              <p>From scheduling to onboarding and follow-ups, we design and manage automations that reclaim hours every week.</p>
-            </div>
-            <div class="card">
-              <h3>High-Touch Support</h3>
-              <p>We’re your AI partner, not a DIY tool. Our concierge team sets up, manages and evolves your systems.</p>
-            </div>
-            <div class="card">
-              <h3>Tailored to Your Business</h3>
-              <p>We focus on seasoned professionals who value service over software. Our solutions adapt to your niche and workflow.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Target Market Section -->
-      <section id="market" class="section market-section">
-        <div class="container two-column">
-          <div class="text">
-            <h2>Who We Serve</h2>
-            <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
-            <h3>Core Clients</h3>
-            <ul class="bullets">
-              <li>Consultants, advisors, and agency owners</li>
-              <li>Client-first professionals who value outcomes over dashboards</li>
-              <li>Busy operators looking to reclaim time and reduce overhead</li>
-              <li>Service teams seeking smarter, done-for-you automation</li>
-            </ul>
-            <h3>Specialized Industries</h3>
-            <ul class="bullets">
-              <li>Real estate brokerages and high-volume agents</li>
-              <li>Insurance and financial services professionals</li>
-              <li>Legal teams and boutique law firms</li>
-              <li>Medspa, wellness, and aesthetic clinics</li>
-              <li>Admin-heavy businesses ready to streamline operations</li>
-            </ul>
-          </div>
-          <div class="image">
-            <img src="assets/robot-and-man.png" alt="Target market illustration" />
-          </div>
-        </div>
-      </section>
-
-      <!-- Packages Section -->
-      <section id="packages" class="section packages-section">
-        <div class="container">
-          <h2>Packages</h2>
-          <div class="cards packages">
-            <div class="card">
-              <h3>Set It & Scale</h3>
-              <p class="price">$2,500</p>
-              <p>Three done-for-you automations to jump-start your business growth.</p>
-              <a href="#contact" class="btn secondary-btn">Get Started</a>
-            </div>
-            <div class="card">
-              <h3>Qorra Concierge</h3>
-              <p class="price">$750/mo</p>
-              <p>Monthly updates and hands-on AI agent management to keep you ahead.</p>
-              <a href="#contact" class="btn secondary-btn">Subscribe</a>
-            </div>
-            <div class="card">
-              <h3>AI Agent Suite</h3>
-              <p class="price">$1.5–3K/mo</p>
-              <p>Coming Q4 2025: 2–5 prebuilt autonomous agents under a retainer/SaaS model.</p>
-              <a href="#contact" class="btn secondary-btn">Join Waitlist</a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Why Qorra Section -->
-      <section id="why" class="section why-section">
-        <div class="container">
-          <h2>Why Choose Qorra?</h2>
-          <div class="cards why">
-            <div class="card">
-              <h3>No Hype, Just Outcomes</h3>
-              <p>We deliver measurable results by plugging AI into your business—no fluff.</p>
-            </div>
-            <div class="card">
-              <h3>White-Glove Concierge</h3>
-              <p>We set up, manage and evolve your automations so you don’t have to.</p>
-            </div>
-            <div class="card">
-              <h3>Built Like a Partner</h3>
-              <p>We’re here for smart professionals who missed the tech wave. Built like an agency, feels like a partner, priced like a solution.</p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Contact Section -->
-      <section id="contact" class="section contact-section">
-        <div class="container">
-          <h2>Get in Touch</h2>
-          <p>Ready to unlock your time? Tell us a bit about yourself and we’ll be in touch.</p>
-          <form id="contactForm" class="contact-form">
-            <div class="form-row">
-              <div class="form-group">
-                <label for="name">Name *</label>
-                <input type="text" id="name" name="name" required />
-              </div>
-              <div class="form-group">
-                <label for="email">Email *</label>
-                <input type="email" id="email" name="email" required />
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group full-width">
-                <label for="company">Company Name</label>
-                <input type="text" id="company" name="company" />
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group full-width">
-                <label for="message">How can we help you?</label>
-                <textarea id="message" name="message" rows="4" placeholder="Describe your pain points or goals…"></textarea>
-              </div>
-            </div>
-            <button type="submit" class="btn primary-btn">Submit</button>
-          </form>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="container footer-content">
-        <p>&copy; 2025 Qorra AI. All rights reserved.</p>
-        <p class="citation">*Research shows that lead generation forms that blend seamlessly into your website’s design yield higher conversion rates.</p>
       </div>
-    </footer>
-  </body>
+    </section>
+
+    <!-- Problem Section -->
+    <section id="problem" class="section problem-section">
+      <div class="container two-column">
+        <div class="text">
+          <h2>The Problem</h2>
+          <p>Successful business owners are falling behind because they don’t have time to learn AI—yet they can’t afford not to use it.</p>
+          <ul class="bullets">
+            <li>Wasting hours on manual tasks</li>
+            <li>Leaking leads from slow follow-up</li>
+            <li>Overwhelmed by tools they don’t understand</li>
+            <li>Needing AI to stay competitive but lacking time to learn it</li>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="assets/automation-robot.png" alt="Problem illustration" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Solution Section -->
+    <section id="solution" class="section solution-section">
+      <div class="container">
+        <h2>Our Solution</h2>
+        <p>Qorra plugs AI into your business workflows so you don’t have to. We automate lead capture, follow-up, onboarding and client communication while building agents that think, respond and handle tasks for you. We deliver white-glove service and real outcomes—not hype.</p>
+        <div class="cards features">
+          <div class="card">
+            <h3>Hands-Free Automations</h3>
+            <p>From scheduling to onboarding and follow-ups, we design and manage automations that reclaim hours every week.</p>
+          </div>
+          <div class="card">
+            <h3>High-Touch Support</h3>
+            <p>We’re your AI partner, not a DIY tool. Our concierge team sets up, manages and evolves your systems.</p>
+          </div>
+          <div class="card">
+            <h3>Tailored to Your Business</h3>
+            <p>We focus on seasoned professionals who value service over software. Our solutions adapt to your niche and workflow.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Target Market Section -->
+    <section id="market" class="section market-section">
+      <div class="container two-column">
+        <div class="text">
+          <h2>Who We Serve</h2>
+          <p>We work with service-based businesses that rely on people, processes, and performance. Our clients want to scale efficiently without getting buried in admin or tech tools they don’t have time to learn.</p>
+          <h3>Core Clients</h3>
+          <ul class="bullets">
+            <li>Consultants, advisors, and agency owners</li>
+            <li>Client-first professionals who value outcomes over dashboards</li>
+            <li>Busy operators looking to reclaim time and reduce overhead</li>
+            <li>Service teams seeking smarter, done-for-you automation</li>
+          </ul>
+          <h3>Specialized Industries</h3>
+          <ul class="bullets">
+            <li>Real estate brokerages and high-volume agents</li>
+            <li>Insurance and financial services professionals</li>
+            <li>Legal teams and boutique law firms</li>
+            <li>Medspa, wellness, and aesthetic clinics</li>
+            <li>Admin-heavy businesses ready to streamline operations</li>
+          </ul>
+        </div>
+        <div class="image">
+          <img src="assets/robot-and-man.png" alt="Target market illustration" />
+        </div>
+      </div>
+    </section>
+
+    <!-- Packages Section -->
+    <section id="packages" class="section packages-section">
+      <div class="container">
+        <h2>Packages</h2>
+        <div class="cards packages">
+          <div class="card">
+            <h3>Set It & Scale</h3>
+            <p>Three done-for-you automations to jump-start your business growth.</p>
+            <a href="#contact" class="btn secondary-btn">Get Started</a>
+          </div>
+          <div class="card">
+            <h3>Qorra Concierge</h3>
+            <p>Monthly updates and hands-on AI agent management to keep you ahead.</p>
+            <a href="#contact" class="btn secondary-btn">Subscribe</a>
+          </div>
+          <div class="card">
+            <h3>AI Agent Suite</h3>
+            <p>Coming Q4 2025: 2–5 prebuilt autonomous agents under a retainer/SaaS model.</p>
+            <a href="#contact" class="btn secondary-btn">Join Waitlist</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Why Qorra Section -->
+    <section id="why" class="section why-section">
+      <div class="container">
+        <h2>Why Choose Qorra?</h2>
+        <div class="cards why">
+          <div class="card">
+            <h3>No Hype, Just Outcomes</h3>
+            <p>We deliver measurable results by plugging AI into your business—no fluff.</p>
+          </div>
+          <div class="card">
+            <h3>White-Glove Concierge</h3>
+            <p>We set up, manage and evolve your automations so you don’t have to.</p>
+          </div>
+          <div class="card">
+            <h3>Built Like a Partner</h3>
+            <p>We’re here for smart professionals who missed the tech wave. Built like an agency, feels like a partner, priced like a solution.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section contact-section">
+      <div class="container">
+        <h2>Get in Touch</h2>
+        <p>Ready to unlock your time? Tell us a bit about yourself and we’ll be in touch.</p>
+        <form id="contactForm" class="contact-form">
+          <div class="form-row">
+            <div class="form-group">
+              <label for="name">Name *</label>
+              <input type="text" id="name" name="name" required />
+            </div>
+            <div class="form-group">
+              <label for="email">Email *</label>
+              <input type="email" id="email" name="email" required />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group full-width">
+              <label for="company">Company Name</label>
+              <input type="text" id="company" name="company" />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group full-width">
+              <label for="message">How can we help you?</label>
+              <textarea id="message" name="message" rows="4" placeholder="Describe your pain points or goals…"></textarea>
+            </div>
+          </div>
+          <button type="submit" class="btn primary-btn">Submit</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-content">
+      <p>&copy; 2025 Qorra AI. All rights reserved.</p>
+      <p class="citation">*Research shows that lead generation forms that blend seamlessly into your website’s design yield higher conversion rates.</p>
+    </div>
+  </footer>
+</body>
 </html>
