--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="navbar">
     <div class="container nav-wrapper">
       <a href="#home" class="logo">
-        <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 60px;" />
+        <img src="qorra-ai-logo.png" alt="Qorra AI logo" />
       </a>
       <nav class="nav-menu">
         <ul>
@@ -29,10 +29,14 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
       <div class="container hero-content">
-        <img src="qorra-ai-logo.png" alt="Qorra AI logo" style="height: 140px; margin-bottom: 1.5rem;" />
-        <h1>Unlock Your<br />Time &<br />Growth</h1>
-        <p>High-impact AI automation designed for established businesses.</p>
-        <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+        <div class="hero-text">
+          <h1>Unlock Your Time & Growth</h1>
+          <p>High-impact AI automation designed for established businesses.</p>
+          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+        </div>
+        <div class="hero-logo">
+          <img src="qorra-ai-logo.png" alt="Qorra AI logo" />
+        </div>
       </div>
     </section>
 
@@ -50,7 +54,7 @@
           </ul>
         </div>
         <div class="image">
-          <img src="assets/automation-robot.png" alt="Problem illustration" style="max-width: 100%; height: auto; border-radius: 10px;" />
+          <img src="assets/automation-robot.png" alt="Problem illustration" />
         </div>
       </div>
     </section>
@@ -59,7 +63,7 @@
     <section id="solution" class="section solution-section">
       <div class="container">
         <h2>Our Solution</h2>
-        <p>Qorra plugs AI into your business workflows so you don’t have to. We automate lead capture, follow-up, onboarding and client communication while building agents that think, respond and handle tasks for you. We deliver white-glove service and real outcomes—not hype.</p>
+        <p>Qorra plugs AI into your business workflows so you don’t have to. We automate lead capture, follow-up, onboarding and client communication while building agents that think, respond and handle tasks for you.</p>
         <div class="cards features">
           <div class="card">
             <h3>Hands-Free Automations</h3>
@@ -100,7 +104,7 @@
           </ul>
         </div>
         <div class="image">
-          <img src="assets/robot-and-man.png" alt="Target market illustration" style="max-width: 100%; height: auto; border-radius: 10px;" />
+          <img src="assets/robot-and-man.png" alt="Target market illustration" />
         </div>
       </div>
     </section>
@@ -112,19 +116,16 @@
         <div class="cards packages">
           <div class="card">
             <h3>Set It & Scale</h3>
-            <p class="price">$2,500</p>
             <p>Three done-for-you automations to jump-start your business growth.</p>
             <a href="#contact" class="btn secondary-btn">Get Started</a>
           </div>
           <div class="card">
             <h3>Qorra Concierge</h3>
-            <p class="price">$750/mo</p>
             <p>Monthly updates and hands-on AI agent management to keep you ahead.</p>
             <a href="#contact" class="btn secondary-btn">Subscribe</a>
           </div>
           <div class="card">
             <h3>AI Agent Suite</h3>
-            <p class="price">$1.5–3K/mo</p>
             <p>Coming Q4 2025: 2–5 prebuilt autonomous agents under a retainer/SaaS model.</p>
             <a href="#contact" class="btn secondary-btn">Join Waitlist</a>
           </div>
