--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
         <div class="hero-logo">
-          <img src="qorra-ai-logo.png" alt="Qorra AI logo" />
+          <img src="assets/NewIG.png" alt="Qorra brand badge" />
         </div>
       </div>
     </section>
