--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
         <div class="hero-logo">
-          <img src="assets/NewIG.png" alt="Qorra brand badge" />
+          <img src="assets/NewIG.png" alt="Qorra Brand Badge" />
         </div>
       </div>
     </section>
@@ -54,7 +54,7 @@
           </ul>
         </div>
         <div class="image">
-          <img src="assets/automation-robot.png" alt="Problem illustration" />
+          <img src="assets/automation-robot.png" alt="Automation Robot Illustration" />
         </div>
       </div>
     </section>
@@ -81,7 +81,7 @@
       </div>
     </section>
 
-    <!-- Target Market Section -->
+    <!-- Who We Serve Section -->
     <section id="market" class="section market-section">
       <div class="container two-column">
         <div class="text">
@@ -104,7 +104,7 @@
           </ul>
         </div>
         <div class="image">
-          <img src="assets/robot-and-man.png" alt="Target market illustration" />
+          <img src="assets/robot-and-man.png" alt="AI & Human Collaboration" />
         </div>
       </div>
     </section>
