--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#solution">Solution</a></li>
           <li><a href="#packages">Packages</a></li>
           <li><a href="#why">Why Qorra</a></li>
-          <li><a href="#contact" class="btn primary-btn">Get Started</a></li>
+          <li><a href="#contact" class="btn primary-btn align-btn">Get Started</a></li>
         </ul>
       </nav>
     </div>
@@ -35,7 +35,7 @@
           <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
         </div>
         <div class="hero-logo">
-          <img src="assets/NewIG.png" alt="Qorra Brand Badge" />
+          <img src="assets/NewIG.png" alt="Qorra Brand Badge" class="hero-image" />
         </div>
       </div>
     </section>
@@ -104,7 +104,7 @@
           </ul>
         </div>
         <div class="image">
-          <img src="assets/robot-and-man.png" alt="AI & Human Collaboration" />
+          <img src="assets/robot-and-man.png" alt="AI & Human Collaboration" class="tall-image" />
         </div>
       </div>
     </section>
@@ -155,7 +155,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="section contact-section">
+    <section id="contact" class="section contact-section wide-contact">
       <div class="container">
         <h2>Get in Touch</h2>
         <p>Ready to unlock your time? Tell us a bit about yourself and we’ll be in touch.</p>
