--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
   <main>
     <!-- Hero Section -->
     <section id="home" class="hero">
-      <div class="container hero-content">
-        <div class="hero-text">
-          <h1>Unlock Your Time & Growth</h1>
-          <p>High-impact AI automation designed for established businesses.</p>
-          <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
-        </div>
-        <div class="hero-logo">
-          <img src="assets/NewIG.png" alt="Qorra Brand Badge" class="hero-image" />
+      <div class="container hero-box">
+        <div class="hero-content">
+          <div class="hero-text">
+            <h1>Unlock Your Time & Growth</h1>
+            <p>High-impact AI automation designed for established businesses.</p>
+            <a href="#contact" class="btn cta-btn">Book a Strategy Call</a>
+          </div>
+          <div class="hero-logo">
+            <img src="assets/NewIG.png" alt="Qorra Brand Badge" class="hero-image" />
+          </div>
         </div>
       </div>
     </section>
